2005-08-18  Timothy Brownawell  <tbrownaw@gmail.com>

	PASS 'make check'
	* pcdv.{cc,hh}: Bugfix tree_state::merge_with_rearrangement .
	Improve suture-handling code.
	* pcdv.cc, change_set.cc: Clean up "printf debugging".
	* change_set.cc: remove commented-out remains of old tree merger

2005-08-17  Timothy Brownawell  <tbrownaw@gmail.com>

	Improve testsuite compliance: 1 failure remaining.
	* tests/t_merge_add_del.at: Remove XFAIL
	* pcdv.{cc,hh}, change_set.cc: (Ick! Ick! Ick!) allow tree
	merger to generate sutures. Bugfix suture handling code.
	Bugfix tree_state::get_changes_for_merge .
	* sanity.cc (gasp()): When catching an error from dumping a MM'd
	variable, do not discard output generated prior to the error. This
	way, at least the header line (function name, file, line no.) is
	printed.
	* change_set.cc: write_insane_change_set: new function to write a
	change set without sanity checking it, now used by dump().
	* tests/t_rename_added_in_rename.at: Make comment match the code.

2005-08-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* change_set.{cc,hh}: Replace tree merger with the one in pcdv.{cc,hh}.
		DOES NOT pass ./testsuite (13 failures, 1 unexpected pass)
		REMOVE disjoint_merge_test() (no longer applicable in
		this form, and the same functionality is checked in tests/ .)
	* commands.cc: New merger takes different arguments; update calls.
	* pcdv.{cc,hh}: Handle sutures better.

2005-08-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* pcdv.{cc,hh} (tree merger): Teach it about file suturing.
		(Needed for tracking the monotone db.)

2005-08-03  Timothy Brownawell  <tbrownaw@gmail.com>

	* pcdv.{cc,hh}: Work on merge functions for trees.
	* commands.cc: Misc. changes to pcdv driver

2005-08-02  Timothy Brownawell  <tbrownaw@gmail.com>

	* pcdv.{cc,hh}: Add history-aware filetree merge.
		TODO: write get_changes_for_merge, add tests.
	* commands.cc: Call it from the pcdv driver.

2005-07-29  Timothy Brownawell  <tbrownaw@gmail.com>
